# evelyn

./: .gitignore  Cargo.toml  Makefile  README.md
src/: app.rs  color.rs  config.rs  input.rs  main.rs  pty.rs  render.rs  term.rs  themes.rs  width.rs
src/app/: clipboard.rs  config_watch.rs  editor.rs  keyboard.rs  mod.rs  mouse.rs
src/app/multiplexer/: mod.rs  socket_probe.rs  tmux.rs  zellij.rs
src/config/: cursor.rs  font.rs  mod.rs  shader.rs  theme.rs  window.rs
src/config/builtins/: defaults.rs  mod.rs  themes.rs
src/config/builtins/shaders/: mod.rs
src/render/: convert.rs  init.rs  mod.rs  overlay.rs  post.rs  quad.rs  text.rs
src/render/shaders/: newpixie_crt.wgsl
src/render/text/: cosmic.rs  mod.rs
src/term/: cell.rs  charset.rs  edit.rs  mod.rs  parser.rs  screen.rs  selection.rs
