[package]
name = "evelyn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = { version = "3", default-features = false }
bytemuck = "1"
glyphon = "0.11.0"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
png = "0.18"
pollster = "0.4.0"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
sys-locale = "0.3"
toml = "0.8"
unicode-script = "0.5"
unicode-width = "0.2"
vte = "0.15"
wgpu = "29"
winit = "0.30"
